# SeriousFractal

./: CMakeLists.txt  README.md  mod.dox
Arch/: Init.py  arch.dox
Assembly/: InitGui.py
Complete/: InitGui.py  complete.dox
Draft/: Init.py  draft.dox  importAirfoilDAT.py
Drawing/: DrawingAlgos.py  Init.py  InitGui.py  drawing.dox
Fem/: Init.py  InitGui.py  fem.dox
Fractal/: CMakeLists.txt  Init.py  InitGui.py  MakeBottle.py  TestPartApp.py  TestPartGui.py
Image/: InitGui.py  image.dox
Import/: Init.py  InitGui.py  import.dox
Inspection/: CMakeLists.txt  InitGui.py  Inspection.dox
Mesh/: Init.py  InitGui.py  mesh.dox
MeshPart/: InitGui.py  meshpart.dox
MyModule/: CMakeLists.txt  Init.py  InitGui.py  MyModule.dox
MyModule/App/: AppMyModule.cpp  AppMyModulePy.cpp  CMakeLists.txt  Fractal.cpp  Fractal.h  PreCompiled.h
MyModule/Gui/: AppMyModuleGui.cpp  AppMyModuleGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  ViewProviderFractal.cpp  ViewProviderFractal.h  Workbench.cpp  Workbench.h
OpenSCAD/: OpenSCAD.dox  importCSG.py
Part/: InitGui.py  part.dox
PartDesign/: Init.py  InitGui.py  TestPartDesignApp.py  TestPartDesignGui.py  partdesign.dox
Plot/: plot.dox
Points/: Init.py  InitGui.py  points.dox
Raytracing/: InitGui.py  RaytracingExample.py  raytracing.dox
ReverseEngineering/: InitGui.py  reverseengineering.dox
Robot/: InitGui.py  KukaExporter.py  MovieTool.py  RobotExample.py  RobotExampleTrajectoryOutOfShapes.py  robot.dox
Sandbox/: Init.py  sandbox.dox
Ship/: Instance.py  TankInstance.py  WeightInstance.py  ship.dox
Sketcher/: Init.py  InitGui.py  SketcherExample.py  TestSketcherGui.py  sketcher.dox
Spreadsheet/: Init.py
Start/: InitGui.py  start.dox
Test/: Init.py  (+9 more)
(+957 files in other folders)
